kubernetes/manifests/apps/3enRaya/namespace-3enRaya.yml
apiVersion: v1
kind: Namespace
metadata:
  name: 3enraya
  labels:
    env: produccion
    app: 3enraya
